# functional_hw

./: README.md  tets.txt
2/: README.txt  hw2.cabal
2/app/: Main.hs
2/src/: TicTacToe-solution.hs  TicTacToe.hs
2/test/: Spec.hs
intro-to-haskell/: intro-to-haskell.cabal
intro-to-haskell/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
intro-to-haskell/src/: Division.hs  Intro.hs
lists-and-refs/: lists-and-refs.cabal
lists-and-refs/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
lists-and-refs/dist-newstyle/packagedb/ghc-8.10.7/: lists-and-refs-0.0.0.1-inplace.conf  package.cache
lists-and-refs/src/: ListRefPrelude.hs  Lists.hs  Main.hs  Refs.hs
