cabal-version: 2.4

name: hw2
version: 0.0.0.1
synopsis: Homework 2: CS 457/557 Functional Programming, Winter 2022
homepage: https://canvas.pdx.edu/courses/14714
license: BSD-3-Clause
license-file: LICENSE
author: Katie Casamento
maintainer: cas28@pdx.edu
copyright: (c) 2022 Katie Casamento
category: Education

library
  exposed-modules: TicTacToe
  default-extensions: GADTSyntax
  build-depends: base >= 4.11 && <5
  hs-source-dirs: src
  default-language: Haskell2010

  ghc-options:
    -fwarn-incomplete-patterns
    -fwarn-incomplete-uni-patterns
    -Werror
    -O2

executable hw2
    main-is: Main.hs
    default-extensions: GADTSyntax
    build-depends: base >= 4.11 && <5, hw2
    hs-source-dirs: app
    default-language: Haskell2010

    ghc-options:
      -fwarn-incomplete-patterns
      -fwarn-incomplete-uni-patterns
      -Werror
      -O2

test-suite spec
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Spec.hs

  default-extensions:
    StandaloneDeriving, DeriveGeneric, DerivingVia, FlexibleInstances,
    MultiParamTypeClasses

  build-depends:
    base >=4.11 && <5, hw2,
    generic-arbitrary, hspec-core, QuickCheck

  ghc-options:
    -fwarn-incomplete-patterns
    -fwarn-incomplete-uni-patterns
    -Werror
    -O2
